welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
  var T = new Array(14)
  var k =0
  for (j <- 0 to T.length -1){
    k = k +1
    for (i <- 0 to j) {
      var n = i+k
      T(n)=k
    }
  }
  return T(num-1)
}